--- a/index.html
+++ b/index.html
@@ -26,40 +26,35 @@
 
   <!-- Add your site or application content here -->
    
-
+  <div id="overlay" onclick="off()">
+      <div class="menu">
+          <div class="inner">
+              <ul>
+                  <li><a href="/about" class="">
+                      ABOUT
+                  </a></li>
+                  <li><a href="/news" class="">
+                      NEWS
+                  </a></li>
+                  <li><a href="/contact-us" class="">
+                      Contact
+                  </a></li>
+              </ul>
+              <div class="email"><a href="mailto:info@avantgardetroupe.africa">info@avantgardetroupe.africa</a></div>
+              <div class="social"><a href="https://www.instagram.com/explore/tags/avantgardetroupe/" target="_blank" rel="noopener">
+                  INSTA
+              </a><a href="https://www.facebook.com/AGVintageLounge/" target="_blank" rel="noopener">
+                  FB
+              </a></div>
+          </div>
+      </div>
+  </div>
   <div id="__layout">
       <section class="wrapper">
           <header class="header">
               <div class="header__logo"><a href="/" class="logo nuxt-link-exact-active nuxt-link-active"><span class="sr-only">Go Home</span></a> <span></span></div>
               <div class="header__nav  "><a href="#" class="view view--horizontal"><span></span> <span></span> <small class="sr-only">View</small></a>
-                  <button class="hamb"><span></span> <span></span> <span></span> <small class="sr-only">Open Menu</small></button>
-                  <div class="menu">
-                      <div class="inner">
-                          <ul>
-                              <li><a href="/about" class="">
-                                  About
-                              </a></li>
-                              <li><a href="/services" class="">
-                                  Services
-                              </a></li>
-                              <li><a href="/work" class="">
-                                  Partnerships
-                              </a></li>
-                              <li><a href="/news" class="">
-                                  News
-                              </a></li>
-                              <li><a href="/contact-us" class="">
-                                  Contact
-                              </a></li>
-                          </ul>
-                          <div class="email"><a href="mailto:partnerships@wmt.digital">partnerships@wmt.digital</a></div>
-                          <div class="social"><a href="https://twitter.com/wmtdigital" target="_blank" rel="noopener">
-                              TW
-                          </a><a href="https://www.facebook.com/wmtdigital/" target="_blank" rel="noopener">
-                              FB
-                          </a></div>
-                      </div>
-                  </div>
+                  <button class="hamb" onclick="on()"><span></span> <span></span> <span></span> <small class="sr-only">Open Menu</small></button>
               </div>
           </header>
           <section class="home">
@@ -67,24 +62,26 @@
                   <section id="home" class="home">
                       <section id="tiny" class="tinyslide">
                           <aside class="slides">
-                            <figure>
-                              <img src="img/slide1.jpg" alt="" />
-                              <figcaption>
-                                Neat Stuff
-                              </figcaption>
-                            </figure>
-                            <figure>
-                              <img src="img/slide2.jpg" alt="" />
-                              <figcaption>
-                                More Text
-                              </figcaption>
-                            </figure>
+                            
+                            <!-- Three slide -->
                             <figure>
                               <img src="img/slide3.jpg" alt="" />
                               <figcaption>
-                                Even More Text
+                                <span class="title">BUBBLES</span> <br/>
+                                <span class="sub">Bryan Dumisani Sakhile Ndlazi</span>
                               </figcaption>
                             </figure>
+
+                            <!-- Three slide -->
+                            <figure>
+                                <img src="img/slide1.jpg" alt="" />
+                                <figcaption>
+                                    <span class="title">VINNY DA VINCI</span> <br/>
+                                    <span class="sub">Deep Underground Club Culture</span>
+                                </figcaption>
+                              </figure>
+
+
                           </aside>
                       </section> 
                   </section>
@@ -92,8 +89,8 @@
               </section>
               <div>
                   <div class="footer__media">
-                      <div class="email"><a href="mailto:partnerships@wmt.digital">partnerships@wmt.digital</a></div>
-                      <div class="social"><a href="https://twitter.com/wmtdigital" target="_blank" rel="noopener"><span><small data-hover="TW">TW</small></span></a><a href="https://www.facebook.com/wmtdigital/" target="_blank" rel="noopener"><span><small data-hover="FB">FB</small></span></a></div>
+                      <div class="email"><a href="mailto:info@avantgardetroupe.africa">info@avantgardetroupe.africa</a></div>
+                      <div class="social"><a href="https://www.instagram.com/explore/tags/avantgardetroupe" target="_blank" rel="noopener"><span><small data-hover="INSTA">INSTA</small></span></a><a href="https://www.facebook.com/AGVintageLounge/" target="_blank" rel="noopener"><span><small data-hover="FB">FB</small></span></a></div>
                   </div>
               </div>
           </section>
