--- a/index.html
+++ b/index.html
@@ -2,117 +2,123 @@
 <html class="no-js" lang="">
 
 <head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
-  <link href="css/tinyslide.css" rel="stylesheet" />
-  <link rel="stylesheet" href="css/bootstrapped.css">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/fullpage.css">
-  <link rel="stylesheet" href="css/main.css">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
+    <!-- Place favicon.ico in the root directory -->
+    <link href="css/tinyslide.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="css/bootstrapped.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/fullpage.css">
+    <link rel="stylesheet" href="css/main.css">
 
-  <meta name="theme-color" content="#fafafa">
+    <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
-  <!--[if IE]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
+<!--[if IE]>
+<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade
+    your browser</a> to improve your experience and security.</p>
+<![endif]-->
 
-  <!-- Add your site or application content here -->
-   
-  <div id="overlay" onclick="off()">
-      <div class="menu">
-          <div class="inner">
-              <ul>
-                  <li><a href="/about" class="">
-                      ABOUT
-                  </a></li>
-                  <li><a href="/news" class="">
-                      NEWS
-                  </a></li>
-                  <li><a href="/contact-us" class="">
-                      Contact
-                  </a></li>
-              </ul>
-              <div class="email"><a href="mailto:info@avantgardetroupe.africa">info@avantgardetroupe.africa</a></div>
-              <div class="social"><a href="https://www.instagram.com/explore/tags/avantgardetroupe/" target="_blank" rel="noopener">
-                  INSTA
-              </a><a href="https://www.facebook.com/AGVintageLounge/" target="_blank" rel="noopener">
-                  FB
-              </a></div>
-          </div>
-      </div>
-  </div>
-  <div id="__layout">
-      <section class="wrapper">
-          <header class="header">
-              <div class="header__logo"><a href="/" class="logo nuxt-link-exact-active nuxt-link-active"><span class="sr-only">Go Home</span></a> <span></span></div>
-              <div class="header__nav  "><a href="#" class="view view--horizontal"><span></span> <span></span> <small class="sr-only">View</small></a>
-                  <button class="hamb" onclick="on()"><span></span> <span></span> <span></span> <small class="sr-only">Open Menu</small></button>
-              </div>
-          </header>
-          <section class="home">
-              <section>
-                  <section id="home" class="home">
-                      <section id="tiny" class="tinyslide">
-                          <aside class="slides">
-                            
+<!-- Add your site or application content here -->
+
+<div id="overlay" onclick="off()">
+    <div class="menu">
+        <div class="inner">
+            <ul>
+                <li><a href="/about" class="">
+                    ABOUT
+                </a></li>
+                <li><a href="/news" class="">
+                    NEWS
+                </a></li>
+                <li><a href="/contact-us" class="">
+                    Contact
+                </a></li>
+            </ul>
+            <div class="email"><a href="mailto:info@avantgardetroupe.africa">info@avantgardetroupe.africa</a></div>
+            <div class="social"><a href="https://www.instagram.com/explore/tags/avantgardetroupe/" target="_blank"
+                                   rel="noopener">
+                INSTA
+            </a><a href="https://www.facebook.com/AGVintageLounge/" target="_blank" rel="noopener">
+                FB
+            </a></div>
+        </div>
+    </div>
+</div>
+<div id="__layout">
+    <section class="wrapper">
+        <header class="header">
+            <div class="header__logo"><a href="/" class="logo nuxt-link-exact-active nuxt-link-active"><span
+                    class="sr-only">Go Home</span></a> <span></span></div>
+            <div class="header__nav  "><a href="#" class="view view--horizontal"><span></span> <span></span>
+                <small class="sr-only">View</small>
+            </a>
+                <button class="hamb" onclick="on()"><span></span> <span></span> <span></span>
+                    <small class="sr-only">Open Menu</small>
+                </button>
+            </div>
+        </header>
+        <section class="home">
+            <section>
+                <section id="home" class="home">
+                    <section id="tiny" class="tinyslide">
+                        <aside class="slides">
+
                             <!-- Three slide -->
                             <figure>
-                              <img src="img/slide3.jpg" alt="" />
-                              <figcaption>
-                                <span class="title">BUBBLES</span> <br/>
-                                <span class="sub">Bryan Dumisani Sakhile Ndlazi</span>
-                              </figcaption>
+                                <img src="img/bubbles.jpg" alt=""/>
+                                <figcaption>
+                                    <span class="title">BUBBLES</span> <br/>
+                                    <span class="sub">Local Dance Music Scene</span>
+                                </figcaption>
                             </figure>
 
                             <!-- Three slide -->
                             <figure>
-                                <img src="img/slide1.jpg" alt="" />
+                                <img src="img/vinny.jpg" alt=""/>
                                 <figcaption>
                                     <span class="title">VINNY DA VINCI</span> <br/>
                                     <span class="sub">Deep Underground Club Culture</span>
                                 </figcaption>
-                              </figure>
+                            </figure>
 
 
-                          </aside>
-                      </section> 
-                  </section>
-            
-              </section>
-              <div>
-                  <div class="footer__media">
-                      <div class="email"><a href="mailto:info@avantgardetroupe.africa">info@avantgardetroupe.africa</a></div>
-                      <div class="social"><a href="https://www.instagram.com/explore/tags/avantgardetroupe" target="_blank" rel="noopener"><span><small data-hover="INSTA">INSTA</small></span></a><a href="https://www.facebook.com/AGVintageLounge/" target="_blank" rel="noopener"><span><small data-hover="FB">FB</small></span></a></div>
-                  </div>
-              </div>
-          </section>
-      </section>
-    </div>
+                        </aside>
+                    </section>
+                </section>
+
+            </section>
+            <div>
+                <div class="footer__media">
+                    <div class="email"><a href="mailto:info@avantgardetroupe.africa">info@avantgardetroupe.africa</a>
+                    </div>
+                    <div class="social"><a href="https://www.instagram.com/explore/tags/avantgardetroupe"
+                                           target="_blank" rel="noopener"><span><small data-hover="INSTA">INSTA</small></span></a><a
+                            href="https://www.facebook.com/AGVintageLounge/" target="_blank" rel="noopener"><span><small
+                            data-hover="FB">FB</small></span></a>
+                        <img class="sponser-logo" src="img/kaya.jpg" width="120px" alt=""/>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+</div>
 
 
+<script src="js/vendor/modernizr-3.7.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
 
-  <script src="js/vendor/modernizr-3.7.1.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
-  <script src="js/vendor/tinyslide.js" /></script>
-  <script src="js/plugins.js"></script>
-  <script src="./js/main.js"></script>
+<script src="js/vendor/tinyslide.js"/></script>
+<scriptsrc = "js/plugins.js" ></script>
+<script src="./js/main.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
 
 </html>
