Solid stable release

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/fullpage.css">
     <link rel="stylesheet" href="css/main.css">
 
-    <meta name="theme-color" content="#fafafa">
+    <meta name="theme-color" content="#000">
 </head>
 
 <body>
@@ -120,12 +120,13 @@
                   <div class="footer__media">
                       <div class="email"><a href="mailto:info@avantgardetroupe.africa">info@avantgardetroupe.africa</a></div>
                       <div class="social">
-                          <img class="sponser-logo" src="img/kaya.jpg" width="120px" alt=""/>
-                          <a href="">
-                                <p id="demo"></p>
-                          </a>
+                          <img class="sponser-logo" src="img/AG logo_FINAL.png" width="120px" alt=""/>
+                          
                           <a href="https://www.instagram.com/explore/tags/avantgardetroupe" target="_blank" rel="noopener"><span><small data-hover="INSTA">INSTA</small></span></a>
                           <a href="https://www.facebook.com/AGVintageLounge/" target="_blank" rel="noopener"><span><small data-hover="FB">FB</small></span></a>
+                          <a href="">
+                            <p id="demo"></p>
+                          </a>
                         </div>
                   </div>
               </div>
@@ -141,9 +142,9 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
 
-<script src="js/vendor/tinyslide.js"/></script>
+<script src="js/vendor/tinyslide.js"></script>
 <script src="js/plugins.js" ></script>
-<script src="./js/main.js"></script>
+<script src="js/main.js"></script>
 
 
 
