--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </a></small>
             <p></p>
             <p></p>
-            <small>Click anywhere to exit</small>
+            <small class="click-exit">Click anywhere to exit</small>
         </div>
     </div>
 
