updated img displays

--- a/index.html
+++ b/index.html
@@ -7,9 +7,27 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="icon.png">
+    <!-- <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png"> -->
     <!-- Place favicon.ico in the root directory -->
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
     <link href="css/tinyslide.css" rel="stylesheet"/>
     <link rel="stylesheet" href="css/bootstrapped.css">
     <link rel="stylesheet" href="css/normalize.css">
@@ -76,7 +94,7 @@
                                 <span class="title">BUBBLES</span> <br/>
                                 <span class="sub">Bryan Dumisani Sakhile Ndlazi, known as the infamous DJ Bubbles was born & raised in Mamelodi. 
                                 </span>
-                                <a href="/" class="view-project"><span><small data-hover="View">Follow on Twitter</small></span></a>
+                                <a href="https://twitter.com/bubblingo?lang=en" class="view-project"><span><small data-hover="View">Follow on Twitter</small></span></a>
                               </figcaption>
                             </figure>
 
@@ -96,7 +114,7 @@
                                     <figcaption>
                                         <span class="title">VINNY DA VINCI</span> <br/>
                                         <span class="sub">With over two decades of deejaying under his belt, Vinny Da Vinci is one of VIP in music South Africa.</span>
-                                        <a href="/" class="view-project"><span><small data-hover="View">Follow on Twitter</small></span></a>
+                                        <a href="https://twitter.com/VinnyDaVinci?lang=en" class="view-project"><span><small data-hover="View">Follow on Twitter</small></span></a>
                                     </figcaption>
                                   </figure>
 
@@ -106,9 +124,20 @@
                                     <figcaption>
                                         <span class="title">DJ SPINNA (NYC)</span> <br/>
                                         <span class="sub">Connecting the dots...</span>
-                                        <a href="/" class="view-project"><span><small data-hover="View">Follow on Twitter</small></span></a>
+                                        <a href="https://twitter.com/djspinna?lang=en" class="view-project"><span><small data-hover="View">Follow on Twitter</small></span></a>
                                     </figcaption>
                                   </figure>
+
+
+                                  <!-- Three slide -->
+                            <figure>
+                                <img src="img/ag_crew.jpg" alt="" />
+                                <figcaption>
+                                    <span class="title">DJ SPINNA (NYC)</span> <br/>
+                                    <span class="sub">Connecting the dots...</span>
+                                    <a href="https://twitter.com/djspinna?lang=en" class="view-project"><span><small data-hover="View">Follow on Twitter</small></span></a>
+                                </figcaption>
+                              </figure>
 
 
                           </aside>
