logo bounce/added slide images

--- a/index.html
+++ b/index.html
@@ -99,24 +99,24 @@
 
                             <!-- Three slide -->
                             <figure>
+                                <!-- hide mobile -->
                                 <img src="img/bubbles.jpg" alt=""/>
+                                
                                 <figcaption>
                                     <span class="title">BUBBLES</span> <br/>
                                     <span class="sub d-none d-sm-block">Bryan Dumisani Sakhile Ndlazi, known as the infamous DJ Bubbles was born & raised in Mamelodi.
                                 </span>
-                                    <a href="/" class="view-project"><span><small
-                                            data-hover="View">Follow on Twitter</small></span></a>
+                                    <a href="https://twitter.com/VinnyDaVinci?lang=en" target="_blank" class="view-project"><span><small data-hover="View">Follow on Twitter</small></span></a>
                                 </figcaption>
                             </figure>
 
                             <!-- Three slide -->
-                            <figure>
+                            <figure> 
                                 <img src="img/zara.jpg" alt=""/>
                                 <figcaption>
                                     <span class="title">ZARA JULIUS</span> <br/>
                                     <span class="sub d-none d-sm-block">Zara Julius is a multidisciplinary artist, social researcher and vinyl selector based in Johannesburg, South Africa.</span>
-                                    <a href="/" class="view-project"><span><small
-                                            data-hover="View">Follow on Twitter</small></span></a>
+                                    <a href="/" class="view-project"><span><small data-hover="View">Follow on Twitter</small></span></a>
                                 </figcaption>
                             </figure>
 
@@ -126,8 +126,7 @@
                                 <figcaption>
                                     <span class="title">VINNY DA VINCI</span> <br/>
                                     <span class="sub d-none d-sm-block">With over two decades of deejaying under his belt, Vinny Da Vinci is one of VIP in music South Africa.</span>
-                                    <a href="/" class="view-project"><span><small
-                                            data-hover="View">Follow on Twitter</small></span></a>
+                                    <a href="https://twitter.com/VinnyDaVinci?lang=en&lang=en" target="_blank" class="view-project"><span><small data-hover="View">Follow on Twitter</small></span></a>
                                 </figcaption>
                             </figure>
 
@@ -137,10 +136,19 @@
                                 <figcaption>
                                     <span class="title">DJ SPINNA (NYC)</span> <br/>
                                     <span class="sub d-none d-sm-block">Connecting the dots...</span>
-                                    <a href="/" class="view-project"><span><small
-                                            data-hover="View">Follow on Twitter</small></span></a>
+                                    <a href="https://twitter.com/djspinna?lang=en" target="_blank" class="view-project"><span><small data-hover="View">Follow on Twitter</small></span></a>
                                 </figcaption>
                             </figure>
+
+                            <!-- Three slide -->
+                            <figure>
+                                    <img src="img/ag_crew.jpg" alt=""/>
+                                    <figcaption>
+                                        <span class="title">Avant Garde</span> <br/>
+                                        <span class="sub d-none d-sm-block">"Escaping earth's gravity & journeying into space" - LIVE on Jazzuary.fm, every sunday from 3PM - 6PM.</span>
+                                        <a href="https://twitter.com/AG_Troupe?lang=en" target="_blank" class="view-project"><span><small data-hover="View">Follow on Twitter</small></span></a>
+                                    </figcaption>
+                                </figure>
 
 
                         </aside>
