--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PTN8DBK');</script>
+    <!-- End Google Tag Manager -->
+
     <!-- <link rel="manifest" href="site.webmanifest">
     <link rel="apple-touch-icon" href="icon.png"> -->
     <!-- Place favicon.ico in the root directory -->
@@ -61,7 +69,7 @@
 
                 <hr/>
             </ul>
-            <div class="email"><a href="mailto:info@avantgardetroupe.africa">info@avantgardetroupe.africa</a></div>
+            <div class="email"><a onclick="ga('send', 'event', 'LINK', 'Mailto', 'Avant Garde Info')" href="mailto:info@avantgardetroupe.africa">info@avantgardetroupe.africa</a></div>
             <small class="social"><a href="https://www.instagram.com/explore/tags/avantgardetroupe/" target="_blank"
                                      rel="noopener">
                 INSTA
@@ -103,7 +111,9 @@
                                 <figcaption>
                                     <span class="title">DJ SPINNA (NYC)</span> <br/>
                                     <span class="sub d-none d-sm-block">Connecting the dots...</span>
-                                    <a href="https://twitter.com/djspinna?lang=en" target="_blank" class="view-project"><span><small
+                                    <a href="https://twitter.com/djspinna?lang=en"
+                                    onclick="ga('send', 'event', 'LINK', 'Twitter', 'DJ SPINNA (NYC)')"
+                                    target="_blank" class="view-project"><span><small
                                             data-hover="View">Follow on Twitter</small></span></a>
                                 </figcaption>
                             </figure>
@@ -117,7 +127,9 @@
                                     <span class="title">BUBBLES</span> <br/>
                                     <span class="sub d-none d-sm-block">Bryan Dumisani Sakhile Ndlazi, known as the infamous DJ Bubbles was born & raised in Mamelodi.
                                 </span>
-                                    <a href="https://twitter.com/Bubblingo" target="_blank"
+                                    <a href="https://twitter.com/Bubblingo" 
+                                    onclick="ga('send', 'event', 'LINK', 'Twitter', 'BUBBLES')"
+                                    target="_blank"
                                        class="view-project"><span><small
                                             data-hover="View">Follow on Twitter</small></span></a>
                                 </figcaption>
@@ -140,7 +152,9 @@
                                 <figcaption>
                                     <span class="title">VINNY DA VINCI</span> <br/>
                                     <span class="sub d-none d-sm-block">With over two decades of deejaying under his belt, Vinny Da Vinci is one of VIP in music South Africa.</span>
-                                    <a href="https://twitter.com/VinnyDaVinci?lang=en&lang=en" target="_blank"
+                                    <a href="https://twitter.com/VinnyDaVinci?lang=en&lang=en" 
+                                    onclick="ga('send', 'event', 'LINK', 'Twitter', 'VINNY DA VINCI')"
+                                    target="_blank"
                                        class="view-project"><span><small
                                             data-hover="View">Follow on Twitter</small></span></a>
                                 </figcaption>
@@ -152,7 +166,9 @@
                                 <figcaption>
                                     <span class="title">Avant Garde</span> <br/>
                                     <span class="sub d-none d-sm-block">"Escaping earth's gravity & journeying into space" - LIVE on Jazzuary.fm, every sunday from 3PM - 6PM.</span>
-                                    <a href="https://twitter.com/AG_Troupe?lang=en" target="_blank"
+                                    <a href="https://twitter.com/AG_Troupe?lang=en" 
+                                    onclick="ga('send', 'event', 'LINK', 'Twitter', 'Avant Garde')"
+                                    target="_blank"
                                        class="view-project"><span><small
                                             data-hover="View">Follow on Twitter</small></span></a>
                                 </figcaption>
