--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-PTN8DBK');</script>
+    <script>(function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({
+            'gtm.start':
+                new Date().getTime(), event: 'gtm.js'
+        });
+        var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src =
+            'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-PTN8DBK');</script>
     <!-- End Google Tag Manager -->
 
     <!-- <link rel="manifest" href="site.webmanifest">
@@ -46,7 +54,7 @@
 </head>
 
 <body>
-
+<div class="se-pre-txt">Connecting the DOTS...</div>
 <div class="se-pre-con"></div>
 
 <!--[if IE]>
@@ -56,11 +64,16 @@
 
 <!-- Add your site or application content here -->
 
+<div id="mobile-count" class="d-block d-sm-none">
+<!--                                <div class="count-t"><div class="li">7<small> days </small></div><div-->
+<!--                                        class="li">19<small> hours </small></div><div class="li">36<small> minutes </small></div><div-->
+<!--                                        class="li">20<small> seconds </small></div></div>-->
+</div>
+
 <div id="overlay" onclick="off()">
-    <div class="class-instruction">
-        <img src="img/AG logo_FINAL2.png" width="380px" alt=""/>
-    </div>
+
     <div class="menu">
+        <img src="img/AG logo_FINAL2.png" width="220px" alt=""/>
         <div class="inner">
             <ul>
                 <li><a href="/about" class="">
@@ -69,7 +82,8 @@
 
                 <hr/>
             </ul>
-            <div class="email"><a onclick="ga('send', 'event', 'LINK', 'Mailto', 'Avant Garde Info')" href="mailto:info@avantgardetroupe.africa">info@avantgardetroupe.africa</a></div>
+            <div class="email"><a onclick="ga('send', 'event', 'LINK', 'Mailto', 'Avant Garde Info')"
+                                  href="mailto:info@avantgardetroupe.africa">info@avantgardetroupe.africa</a></div>
             <small class="social"><a href="https://www.instagram.com/explore/tags/avantgardetroupe/" target="_blank"
                                      rel="noopener">
                 INSTA
@@ -112,8 +126,8 @@
                                     <span class="title">DJ SPINNA (NYC)</span> <br/>
                                     <span class="sub d-none d-sm-block">Connecting the dots...</span>
                                     <a href="https://twitter.com/djspinna?lang=en"
-                                    onclick="ga('send', 'event', 'LINK', 'Twitter', 'DJ SPINNA (NYC)')"
-                                    target="_blank" class="view-project"><span><small
+                                       onclick="ga('send', 'event', 'LINK', 'Twitter', 'DJ SPINNA (NYC)')"
+                                       target="_blank" class="view-project"><span><small
                                             data-hover="View">Follow on Twitter</small></span></a>
                                 </figcaption>
                             </figure>
@@ -127,9 +141,9 @@
                                     <span class="title">BUBBLES</span> <br/>
                                     <span class="sub d-none d-sm-block">Bryan Dumisani Sakhile Ndlazi, known as the infamous DJ Bubbles was born & raised in Mamelodi.
                                 </span>
-                                    <a href="https://twitter.com/Bubblingo" 
-                                    onclick="ga('send', 'event', 'LINK', 'Twitter', 'BUBBLES')"
-                                    target="_blank"
+                                    <a href="https://twitter.com/Bubblingo"
+                                       onclick="ga('send', 'event', 'LINK', 'Twitter', 'BUBBLES')"
+                                       target="_blank"
                                        class="view-project"><span><small
                                             data-hover="View">Follow on Twitter</small></span></a>
                                 </figcaption>
@@ -141,8 +155,8 @@
                                 <figcaption>
                                     <span class="title">ZARA JULIUS</span> <br/>
                                     <span class="sub d-none d-sm-block">Zara Julius is a multidisciplinary artist, social researcher and vinyl selector based in Johannesburg, South Africa.</span>
-<!--                                    <a href="/" class="view-project"><span><small-->
-<!--                                            data-hover="View">Follow on Twitter</small></span></a>-->
+                                    <!--                                    <a href="/" class="view-project"><span><small-->
+                                    <!--                                            data-hover="View">Follow on Twitter</small></span></a>-->
                                 </figcaption>
                             </figure>
 
@@ -152,9 +166,9 @@
                                 <figcaption>
                                     <span class="title">VINNY DA VINCI</span> <br/>
                                     <span class="sub d-none d-sm-block">With over two decades of deejaying under his belt, Vinny Da Vinci is one of VIP in music South Africa.</span>
-                                    <a href="https://twitter.com/VinnyDaVinci?lang=en&lang=en" 
-                                    onclick="ga('send', 'event', 'LINK', 'Twitter', 'VINNY DA VINCI')"
-                                    target="_blank"
+                                    <a href="https://twitter.com/VinnyDaVinci?lang=en&lang=en"
+                                       onclick="ga('send', 'event', 'LINK', 'Twitter', 'VINNY DA VINCI')"
+                                       target="_blank"
                                        class="view-project"><span><small
                                             data-hover="View">Follow on Twitter</small></span></a>
                                 </figcaption>
@@ -166,9 +180,9 @@
                                 <figcaption>
                                     <span class="title">Avant Garde</span> <br/>
                                     <span class="sub d-none d-sm-block">"Escaping earth's gravity & journeying into space" - LIVE on Jazzuary.fm, every sunday from 3PM - 6PM.</span>
-                                    <a href="https://twitter.com/AG_Troupe?lang=en" 
-                                    onclick="ga('send', 'event', 'LINK', 'Twitter', 'Avant Garde')"
-                                    target="_blank"
+                                    <a href="https://twitter.com/AG_Troupe?lang=en"
+                                       onclick="ga('send', 'event', 'LINK', 'Twitter', 'Avant Garde')"
+                                       target="_blank"
                                        class="view-project"><span><small
                                             data-hover="View">Follow on Twitter</small></span></a>
                                 </figcaption>
@@ -185,15 +199,18 @@
                     <div class="email"><a href="mailto:info@avantgardetroupe.africa">info@avantgardetroupe.africa</a>
                     </div>
                     <div class="social">
-                        <img class="sponser-logo" src="img/AG logo_FINAL.png" width="120px" alt=""/>
+                        <img class="sponser-logo" src="img/AG logo_FINAL.png" width="80px" alt=""/>
 
                         <a href="https://www.instagram.com/explore/tags/avantgardetroupe" target="_blank"
                            rel="noopener"><span><small data-hover="INSTA">INSTA</small></span></a>
                         <a href="https://www.facebook.com/AGVintageLounge/" target="_blank" rel="noopener"><span><small
                                 data-hover="FB">FB</small></span></a>
-                        <a href="">
-                            <p id="demo"></p>
-                        </a>
+                        <span href="">
+                            <div id="demo"></div>
+<!--                            <div class="count-t"><div class="li">7<small> days </small></div><div-->
+<!--                                    class="li">19<small> hours </small></div><div class="li">36<small> minutes </small></div><div-->
+<!--                                    class="li">20<small> seconds </small></div></div>-->
+                        </span>
                     </div>
                 </div>
             </div>
@@ -217,13 +234,16 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139719840-1"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-139719840-1');
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+
+    gtag('config', 'UA-139719840-1');
 </script>
-
 
 
 </body>
