Prod - Release 14 May 2018

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- <link rel="manifest" href="site.webmanifest">
     <link rel="apple-touch-icon" href="icon.png"> -->
     <!-- Place favicon.ico in the root directory -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="/a">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
@@ -123,7 +123,7 @@
                             <figure>
                                 <img src="img/spinna.jpg" alt=""/>
                                 <figcaption>
-                                    <span class="title">DJ SPINNA (NYC)</span> <br/>
+                                    <span class="title">DJ SPINNA</span> <br/>
                                     <span class="sub d-none d-sm-block">Connecting the dots...</span>
                                     <a href="https://twitter.com/djspinna?lang=en"
                                        onclick="ga('send', 'event', 'LINK', 'Twitter', 'DJ SPINNA (NYC)')"
@@ -164,7 +164,7 @@
                             <figure>
                                 <img src="img/vinny.jpg" alt=""/>
                                 <figcaption>
-                                    <span class="title">VINNY DA VINCI</span> <br/>
+                                    <span class="title">DA VINCI</span> <br/>
                                     <span class="sub d-none d-sm-block">With over two decades of deejaying under his belt, Vinny Da Vinci is one of VIP in music South Africa.</span>
                                     <a href="https://twitter.com/VinnyDaVinci?lang=en&lang=en"
                                        onclick="ga('send', 'event', 'LINK', 'Twitter', 'VINNY DA VINCI')"
@@ -199,7 +199,10 @@
                     <div class="email"><a href="mailto:info@avantgardetroupe.africa">info@avantgardetroupe.africa</a>
                     </div>
                     <div class="social">
-                        <img class="sponser-logo" src="img/AG logo_FINAL.png" width="80px" alt=""/>
+                        <div class="c-logo">
+                            <img class="sponser-logo" src="img/AG logo_FINAL.png"  alt="Avant G Logo "/>
+                        </div>
+
 
                         <a href="https://www.instagram.com/explore/tags/avantgardetroupe" target="_blank"
                            rel="noopener"><span><small data-hover="INSTA">INSTA</small></span></a>
